# University-Timetabling-System

./: .gitignore  .gitmodules  CMakeLists.txt  Course.cpp  Course.hpp  Genetic.cpp  Instructor.cpp  Instructor.hpp  Makefile  README.md  Schedule.cpp  TimeSlot.cpp  TimeSlot.hpp  University.cpp  University.hpp  UniversityTimetable  config.json  connect_db.sh  install.sh  main.cpp  result.json  run.sh  setup.sh  university.json
UI/backend/: app.py  constants.py  dbUtils.py  db_utils.py  integration_test.py  requirements.txt  unitTest.py
UI/frontend/: package-lock.json
UI/frontend/university-timetable/: README.md  package-lock.json  package.json
UI/frontend/university-timetable/src/: App.vue
UI/frontend/university-timetable/src/components/: AddCourse.vue
include/: Course.hpp  Instructor.hpp  TimeSlot.hpp  University.hpp
src/: Course.cpp  Genetic.cpp  Instructor.cpp  TimeSlot.cpp  UniBindings.cpp  University.cpp  main.cpp
test/: main.cpp
